# connect4

./: .gitignore  CMakeLists.txt  PerfectPlayer.py  Position.hpp  c4solver  main.cpp  pybind.cc
